updated. add main block

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: "Bebas Neue";
+  src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
+    url("../fonts/BebasNeueRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -67,4 +76,90 @@ body {
 
 .nav__bar-phone:hover {
   color:#3596f5;
+}
+
+/* main */
+.main {
+  max-width: 1280px;
+  margin: auto;
+
+  padding-top: 54px;
+
+  display: flex;
+
+}
+
+.main__info {
+  flex-grow: 1;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.home__img path {
+  opacity: 0;
+}
+
+.home__img path:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.counter__group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.counter__button {
+  background: #fff;
+  border: none;
+
+  cursor: pointer;
+  transition: transform .2s ease;
+}
+
+.counter__button:hover {
+  transform: scale(1.2);
+}
+
+.counter__arrow_down {
+  transform: rotateX(180deg);
+}
+
+.main__title {
+  margin: 0;
+
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: normal;
+
+  font-size: 37px;
+  line-height: 37px;
+  text-transform: uppercase;
+
+  color: #635854;
+}
+
+.counter {
+  font-family: "Bebas Neue", sans-serif;
+
+  color: #635854;
+  font-size: 124px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.button__primary {
+  background: #3596F5;
+  border-radius: 6px;
+
+  color: #FFFFFF;
+  border: none;
+
+  padding: 16px 36px;
+
+  cursor: pointer;
 }
