--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ body {
   cursor: pointer;
 }
 
+path.current-floor {
+  opacity: 1;
+}
+
 .counter__group {
   display: flex;
   flex-direction: column;
